fix: auto-slide isssue on small devices

--- a/src/app/components/UserReviews/UserReviews.module.css
+++ b/src/app/components/UserReviews/UserReviews.module.css
@@ -54,6 +54,9 @@
 }
 
 @media screen and (max-width: 768px) {
+	.container {
+		width: 100%;
+	}
 	/* Configure slide width same as RatingCard width below 768px  */
 	.slide {
 		width: 244px !important;
